@@ -55,15 +55,13 @@ namespace DAnCE
 
     CCMObjectLocator (CORBA::ORB_ptr orb, PortableServer::POA_ptr parent_poa, const char * poa_name);
 
-
-    ~CCMObjectLocator();
+    virtual ~CCMObjectLocator();
 
     virtual ::PortableServer::Servant preinvoke (
                                                  const ::PortableServer::ObjectId & oid,
                                                  ::PortableServer::POA_ptr adapter,
                                                  const char * operation,
-                                                 ::PortableServer::ServantLocator::Cookie & the_cookie
-                                                 );
+                                                 ::PortableServer::ServantLocator::Cookie & the_cookie);
 
     virtual void postinvoke (
                              const ::PortableServer::ObjectId & /*oid*/,
