@@ -52,7 +52,7 @@ project(TSEC_CheckPoint_svnt) : ciao_servant, event, avoids_ace_for_tao {
 }
 
 
-project(TSEC_CheckPoint_exec) : ciao_executor, event, ccm_svnt, ciao_session_container, avoids_ace_for_tao {
+project(TSEC_CheckPoint_exec) : ciao_executor, event, ccm_svnt, ciao_session_container, avoids_ace_for_tao, naming {
   after   += TSEC_CheckPoint_svnt
   after   += ENW_skel ENW_stub
 
