@@ -1,3 +1,15 @@
+Mon Mar 16 20:11:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * DAnCE/RedirectionService/CCMObjectLocator.h:
+          Made destructor virtual
+
+        * DAnCE/tests/ObjectLocatorTest/ObjectLocatorTest.mpc:
+        * DAnCE/tests/RedirectionServiceTest/DummyImpl.h:
+          Layout changes
+
+        * tests/Bug_2130_Regression/SEC_CheckPoint/TSEC_CheckPoint.mpc:
+          Added naming
+
 Sun Mar 15 19:28:54 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * MPC/config/ciao_executor.mpb:
